docs/css/style.css
/* Styling for general ids/classes */
* {
    box-sizing: border-box;
}

html,
body,
button {
    background: #e0c8e8;
    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    margin: 0px;
}

/* ******************************************************* */
/* Headers and Navigation ******************************** */
/* ******************************************************* */
#page_Header {
    /* top bar for all navigation methods */
    background-color: #111;
    padding: 10px;
}
#main_Nav {
    /* main navigation on top, for PC */
    text-align: center;
    font-size: 25px;
    padding: 0px;
    margin: 0px;
}
#bars_Nav { 
    /* bar icon for mobile navigation */
    color:#e0c8e8;
    font-size: 25px;
    padding: 3px;
}
#bars_Nav:hover {cursor: pointer;}
#side_Nav {
    /* side navigation on side, for mobile */
    text-align: left;
    text-indent: 30px;
    font-size: 25px;
    padding-top: 80px;
}
#side_btn {
    /* side navigation menu buttons */
}
/* Page buttons for main and side navigation */
.page_btn {
    border: none;
    outline: none;
    margin: inherit;
    font-size: inherit;
    cursor: pointer;
    color:#e0c8e8;
    background-color: #111;
}
.page_btn:hover {color: rgb(201, 247, 94);}
.page_btn.page_active {color: rgb(201, 247, 94);}
/* The side navigation menu */
.sidenav {
  height: 100%; /* 100% Full-height */
  width: 0; /* 0 width - change this with JavaScript */
  position: fixed; /* Stay in place */
  z-index: 1; /* Stay on top */
  top: 0; /* Stay at the top */
  left: 0;
  background-color: #111; /* Black*/
  overflow-x: hidden; /* Disable horizontal scroll */
  padding-top: 60px; /* Place content 60px from the top */
  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
}
/* The navigation menu links */
.sidenav a {
  padding: 8px 8px 8px 32px;
  text-decoration: none;
  font-size: 25px;
  color: #dcbde6;
  display: block;
  transition: 0.3s;
}
/* When you mouse over the navigation links, change their color */
.sidenav a:hover {
  color: rgb(201, 247, 94);
}
/* Position and style the close button (top right corner) */
.sidenav .closebtn {
  position: absolute;
  top: 0;
  right: 25px;
  font-size: 36px;
  margin-left: 50px;
}
/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
@media screen and (max-height: 450px) {
  .sidenav {padding-top: 15px;}
  .sidenav a {font-size: 18px;}
}
@media only screen and (max-width: 600px) {
    #main_Nav {display: none;}
}
@media only screen and (min-width: 601px) {
    #bars_Nav-container {display: none;}
    #bars_Nav {display: none;}
    #side_Nav {display: none;}
}



/* ******************************************************* */
/* Main page content ************************************* */
/* ******************************************************* */
/* General */
#main {
    text-align: center;
    padding: 20px;
}
#sitename a {
    color:#2f1738;
    align-items: center;
    margin-bottom: 20px;
}
#title {
    font-size: 50px;
    font-family: "Bungee Shade", sans-serif;
    font-weight: 400;
    font-style: normal;
    width: 100%;
}
.page {
    text-align: center;
    align-items: center;
    margin: 40px;
    flex: 0 1;
}
.img {
    height: auto;
    max-width: 100%;
    padding: 4px;
}
/* Home: General Panels */
.left_Panel {
    /* align-items: right; */
    text-align: right;
    width: 40%;
    padding-left: 10%;
    margin: 5 auto;
    float: left;
    /* position: relative; */
}
.right_Panel {
    /* align-items: left; */
    text-align: left;
    width: 60%;
    padding-right: 10%;
    margin: 5 auto;
    float: right;
}
/* Home: content */
#portrait {
    display: block;
    width: 80%;
    margin-left: auto;
    margin-right: auto;
}
#left_home_txt {
    font-family: sans-serif;
    margin-top: 35px;
    text-align: center;
}
#main_home_txt {
    font-family: sans-serif;
}
/* Work Experience */
#center_Panel {
    width: 700px;
    float: center;
    align-items: left;
    text-align: left;
    margin: 0 auto;
}
.resume_category{
    font-size: 20px;
}
.resume_subhead {
    font-family: sans-serif;
    font-size: 18px;
    color:#2f1738;
}
.resume_bullets {
    font-family: sans-serif;
    font-size: 16px;
    color:#111;
}











/* Page: OTHER */
.row {
    padding: 1px;
    border-radius: 10px;
    margin-bottom: 2px;
}

/* Styling for zoom lens in images */
.img-magnifier-container {
    position: relative;
    display: inline-block;
    padding: 10px;
    border-radius: 1px;
    margin-bottom: 1px;
    flex: 100%;
}

.img-magnifier-glass {
    position: absolute;
    border: 3px solid purple;
    border-radius: 50%;
    cursor: pointer;
    /*Set the size of the magnifier glass:*/
    width: 100px;
    height: 100px;
}

/* Styling for gallery */
.gallery_row {
    display: -ms-flexbox;
    display: flex;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    padding: 0 4px;
}

/* Create two equal columns that sits next to each other */
#gallery_Header {
    text-align: right;
    font-size: 80%;
}

.gallery_col {
    -ms-flex: 50%;
    flex: 50%;
    padding: 0 4px;
}

.gallery_col img {
    margin-top: 8px;
    vertical-align: middle;
}

.gallery_btn {
    border: none;
    outline: none;
    padding: 5px 10px;
    background-color: rgb(167, 155, 167);
    cursor: pointer;
    color: white;
}

.gallery_btn:hover {
    background-color: rgb(189, 74, 189);
}

.gallery_btn.gallery_active {
    background-color: purple;
    color: white;
}

